# latkit

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  PLAN.md  README.md  STAGE0.md  STAGE1.md  STAGE2.md  STAGE3.md  STAGE4.md  STAGE5.md  STAGE6.md  STAGE7.md  STAGE8.md
.github/workflows/: ci.yml  kernels.yml  release.yml
dashboards/: README.md  latkit-drilldown.json  latkit-health.json  latkit-overview.json  latkit-queries.json  lint.sh
deploy/demo/: Dockerfile  README.md  docker-compose.yml  prometheus.yml
deploy/demo-blindspots/: README.md  docker-compose.yml  prometheus.yml
deploy/demo-blindspots/load/: load.sh  schema.sql
deploy/demo-mysql/: README.md  docker-compose.yml  prometheus.yml
deploy/demo-mysql/load/: load.sh
deploy/demo-olap/: README.md  docker-compose.yml  prometheus.yml
deploy/demo-olap/load/: load.sh  queries.sql  schema.sql
deploy/demo/load/: load.sh
deploy/dev/: bench.sh  docker-compose.yml
deploy/docker/: Dockerfile
deploy/existing-mysql/: README.md  docker-compose.yml
deploy/existing-postgres/: README.md  docker-compose.yml  prometheus.yml
deploy/k8s/: latkit-daemonset.yaml
deploy/systemd/: latkit.env.example  latkit.service
deploy/vps/: README.md  docker-compose.yml
docs/: accuracy.md  deploy.md  notes-export.md  notes-iov.md  notes-metrics.md  notes-myproto.md  notes-pgproto.md  notes-reassembly.md  notes-tls.md  perf.md
src/agent/: cgroup_filter.c  cgroup_filter.h  cgroup_match.c  cgroup_match.h  conn_table.c  conn_table.h  decode.c  decode.h  events.c  events.h  loop.c  loop.h  main.c  pipeline.c  pipeline.h  reassembly.c  reassembly.h  record.c  record.h  seqtrack.c  seqtrack.h  tls_attach.c  tls_attach.h
src/bpf/: latkit.bpf.c  latkit.h
src/common/: otel_env.c  otel_env.h  version.h
src/export/: http.c  http.h  otlp.c  otlp.h  pbuf.c  pbuf.h  prom.c  prom.h  spans.c  spans.h  timebase.c  timebase.h
src/metrics/: hist.c  hist.h  metrics.c  metrics.h  registry.c  registry.h  selfstats.c  selfstats.h
src/norm/: norm_sql.c  norm_sql.h
src/proto/: proto.h  registry.c
src/proto/my/: my.c  my.h  my_frame.c  my_prep.c  my_query.c  my_session.c  my_wire.h
src/proto/pg/: pg.c  pg.h  pg_frame.c  pg_prep.c  pg_query.c  pg_session.c  pg_wire.h
tests/: valgrind.supp
tests/bench/: otlp_sink.py  report.awk  run-mysql.sh  run.sh
tests/bench/accuracy/: lknorm.c  logjoin.c  run-mysql.sh  run.sh
tests/bench/micro/: CMakeLists.txt  bench_reasm.c  bench_spans.c  bench_util.h  bench_wrap.c
tests/e2e/: Dockerfile.latkit  README.md  docker-compose.mysql-tls.yml  docker-compose.mysql.yml  docker-compose.tls.yml  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  verify-mysql-tls.sh  verify-mysql.sh  verify-tls.sh  verify.sh
tests/fixtures/: bind_unknown.lkt  cancel.lkt  copy_in.lkt  copy_out.lkt  error.lkt  extended.lkt  multi_statement.lkt  my_compressed.lkt  my_cursor_fetch.lkt  my_error.lkt  my_load_data.lkt  my_multi_statement.lkt  my_prepared.lkt  my_simple_query.lkt  my_ssl.lkt  my_synthetic_midsession.lkt  pipeline_error.lkt  prepared.lkt  session_gap.lkt  simple_query.lkt  ssl_plain.lkt  ssl_tls.lkt  synthetic_midsession.lkt
tests/fuzz/: CMakeLists.txt  campaign.sh  fuzz_invariants.h  fuzz_my.c  fuzz_norm.c  fuzz_pg.c  fuzz_pipe.c  fuzz_pipe_ops.h  gen_seeds.c  norm_fuzz.c  pg_fuzz.c
tests/fuzz/corpus/my/: compressed_handshake  error_reply  prepared  regress_cols_blind_packet  simple_session  ssl_request
tests/fuzz/corpus/norm/: binds  comments  dollar_quote  escapes  in_list  keywords  multi_stmt  numbers  quoted_ident  simple  unterminated  values_multi
tests/fuzz/corpus/pg/: cancel  copy_in  error_txn  extended_session  simple_session  ssl_accepted  ssl_refused
tests/fuzz/corpus/pipe/: capture_holes  churn_sweep  clean_session  gap_resync  lazy_dirty_resync_race  raw_records  tls_flip
tests/fuzz/dict/: my.dict  pg.dict
tests/k8s/: smoke.sh
tests/kernel/: CMakeLists.txt  fixture_stream.h  nobtf.sh  pgstream.c  smoke.sh  tlspipe.c
tests/longrun/: plot.py  run.sh
tests/replay/: CMakeLists.txt  fixtures_gen.c  fixtures_gen.h  gen_fixtures.c  lkt_info.c  lkt_messages.c  lkt_queries.c  queries_traces.sh  test_replay.c
tests/traces/mysql/: README.md  record.sh
tests/traces/mysql/clients/: Scenarios.java  scenarios.py
tests/traces/mysql/maria1011/: cli-big-resultset.lkt  cli-compress.lkt  cli-error.lkt  cli-load-data.lkt  cli-prepared-text.lkt  cli-simple.lkt  cli-tls-decrypted.lkt  cli-tls.lkt  cli-transaction.lkt  jdbc-cursor-fetch.lkt  jdbc-multi.lkt  jdbc-prepared.lkt  jdbc-simple.lkt  jdbc-transaction.lkt  py-error.lkt  py-load-data.lkt  py-multi.lkt  py-prepared.lkt  py-simple.lkt  py-transaction.lkt
tests/traces/mysql/my57/: cli-big-resultset.lkt  cli-compress.lkt  cli-error.lkt  cli-load-data.lkt  cli-prepared-text.lkt  cli-simple.lkt  cli-tls-decrypted.lkt  cli-tls.lkt  cli-transaction.lkt  jdbc-cursor-fetch.lkt  jdbc-multi.lkt  jdbc-prepared.lkt  jdbc-simple.lkt  jdbc-transaction.lkt  py-error.lkt  py-load-data.lkt  py-multi.lkt  py-prepared.lkt  py-simple.lkt  py-transaction.lkt
tests/traces/mysql/my84/: cli-big-resultset.lkt  cli-compress-zstd.lkt  cli-compress.lkt  cli-error.lkt  cli-load-data.lkt  cli-prepared-text.lkt  cli-simple.lkt  cli-tls-decrypted.lkt  cli-tls.lkt  cli-transaction.lkt  jdbc-cursor-fetch.lkt  jdbc-multi.lkt  jdbc-prepared.lkt  jdbc-simple.lkt  jdbc-tls.lkt  jdbc-transaction.lkt  py-error.lkt  py-load-data.lkt  py-multi.lkt  py-prepared.lkt  py-simple.lkt  py-tls.lkt  py-transaction.lkt
tests/unit/: CMakeLists.txt  config_priority.sh  readme_flags.sh  test_cgroup.c  test_conn_table.c  test_decode.c  test_hist.c  test_http.c  test_metrics.c  test_my_frame.c  test_my_prep.c  test_my_query.c  test_my_session.c  test_my_wire.c  test_norm_sql.c  test_otlp_client.c  test_otlp_enc.c  test_pbuf.c  test_pg_prep.c  test_pg_query.c  test_pg_session.c  test_pg_wire.c  test_reassembly.c  test_registry.c  test_seqtrack.c  test_smoke.c  test_spans.c  test_timebase.c  test_tls_route.c
(+4 files in other folders)
